	
Changes since version 1.5-18

  * pcdtest: small efficiency enhancement (calc only lower.tri of rhos)
  * pos.index (internal, not exported): new func to determine column numbers of index vars in pdata.frame
  * cosmetics: * some extraction/subsetting functions doubled 'pseries' in the class of returned value (fixed now)
               * extraction methods for pdata.frame and pseries now preserve order of attributes
               * class "pindex" for attribute index not lost anymore after subsetting a pdata.frame
	
Changes since version 1.5-19

  * pcce now supports model.matrix and pmodel.response methods, extracting the transformed data so that the estimator can be replicated by lm(pmodel.response(model) ~ model.matrix(model)); this is needed both for vcovXX functions and for cluster bootstrapping
  * summary.pcce outputs the R2 calculated according to Holly, Pesaran and Yamagata instead of RSS/TSS
	
Changes since version 1.5-20

  * vcovXX.pcce methods added by copying the vcovXX.plm ones; work just the same, sandwiching the appropriate "meat" in transformed data. General reference is Wooldridge, Ch. 7
  
Changes since version 1.5-21

  * new function as.list.pdata.frame:
      Default behaviour is to act identical to as.list.data.frame (some code relies on this, do not change!).
      By setting arg 'keep.attributes = TRUE', one gets a list of pseries and can operate on
      this list as one would expected for (e.g. 'lapplied') operations on the columns of a 
      pdata.frame, e.g. to lag over more than one column, use:
        lapply(as.list(pdataframe[ , your_cols], keep.attributes = TRUE), lag)

Changes since version 1.5-22

  * pdata.frames are now more consistent after subsetting:
      => identical(pdataframe, pdataframe[1:nrow(pdataframe), ]) yields TRUE now
       * fixed: after subsetting unnecessary information was added to the resulting pdata.frame
       * fixed: mode of index attribute was changed (unintentionally "simplified")
