@@ -1,7 +1,7 @@
 
-R version 3.2.2 (2015-08-14) -- "Fire Safety"
-Copyright (C) 2015 The R Foundation for Statistical Computing
-Platform: x86_64-pc-linux-gnu (64-bit)
+R version 3.3.0 (2016-05-03) -- "Supposedly Educational"
+Copyright (C) 2016 The R Foundation for Statistical Computing
+Platform: x86_64-w64-mingw32/x64 (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -35,8 +35,11 @@ Loading required package: Formula
 > a <- try(m <- plm(y ~ x, data=data, model="random"))
 Error in model.matrix.pFormula(object, data, model = "pooling") : 
   NA in the individual index variable
+In addition: Warning message:
+In pdata.frame(data, index) :
+  at least one couple (time-id) has NA in at least one index dimension in resulting pdata.frame
 >                            # should give an error: NA in the individual index
 > 
 > proc.time()
    user  system elapsed 
-  2.452   0.084   2.534 
+   1.84    0.06    1.88 
