@@ -667,4 +667,6 @@ Changes since version 1.5-22
       => identical(pdataframe, pdataframe[1:nrow(pdataframe), ]) yields TRUE now
        * fixed: after subsetting unnecessary information was added to the resulting pdata.frame
        * fixed: mode of index attribute was changed (unintentionally "simplified")
+  * pdata.frame is now a little more informative for NA values in either individual or time index
+    (a warning issued when such a pdata.frame is created)
 
